fix: Responsive on mobile devices

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,4 +1,15 @@
-@media screen and (min-width: 650px) {
+@media screen and (max-width: 650px) {
+	.resto__container {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .resto__list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media screen and (min-width: 651px) {
 	.app-bar {
 		grid-template-columns: 1fr auto;
 		padding: 8px 32px;
@@ -45,28 +56,50 @@
 		grid-column-start: 1;
 		grid-column-end: 3;
 	}
+
+  .resto__list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media screen and (min-width: 800px) {
 	.app-bar .app-bar__brand h1 {
 		font-size: 2em;
 	}
+
+	.resto__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media screen and (min-width: 850px) {
 	.movies {
 		grid-template-columns: repeat(3, 1fr);
 	}
+
+	
 }
 
 @media screen and (min-width: 1200px) {
 	.movies {
 		grid-template-columns: repeat(4, 1fr);
 	}
+
+	.resto__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media screen and (min-width: 1600px) {
 	.movies {
 		grid-template-columns: repeat(5, 1fr);
 	}
+
+	.resto__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
